--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 <div class = "examples">
     <div class = "show-box">
-        <img src="images/casita/Casita.jpg" class = "show-box-pic"/>
+        <img src="images/Casita/Casita.jpg" class = "show-box-pic"/>
         <p class="box-text">
             This is a website I wrote called Casita.<br>
             It serves as both an advertisement and a booking site for a fictional resort.<br>
