--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <br>
         My main strength is working with people, and I try to channel that into the websites I make,
         making them readable, and engaging for targeted audiences. I also firmly belive that communication 
-        is key to a good working team and I strive to bring that mindset to evey participate in.
+        is key to a good working team and I strive to bring that mindset to evey project that I participate in.
 
     </p>
 <!--The area that is innitially hidden from view and contains brief expplinations of the sites that I've built-->
